# qkt-lab

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  lab.yaml  pyproject.toml  qkt.config.yaml
.github/workflows/: ci.yml
db/: schema.sql
docs/: ARCHITECTURE.md  CAUSAL-GRAPH.md  DECISION-LIFECYCLE.md  DEPLOYMENT.md  MEMORY.md  PLAN.md  PRODUCTION-READINESS.md  RESEARCH-VERDICT.md  RUNTIME.md  SELF-ADVANCING.md  SIZING.md  UI-UX-AUDIT.md
docs/specs/: phase-0-spikes.md  phase-1-loop.md  phase-2-context.md  phase-3-journal.md  phase-4-memory.md  phase-5-learning.md  phase-6-proof.md
exporters/: deltalytix.py
journal-ui/: index.html  package-lock.json  package.json  vite.config.js
journal-ui/src/: App.jsx  index.css
lab/: agent.py  beliefs.py  calendar.py  calibrate.py  charts.py  config.py  context.py  cycle.py  dashboard.py  distill.py  execute.py  experiment.py  gates.py  graph.py  join.py  procedures.py  qkt.py  retrieve.py  sizing.py  store.py
memory/calendar/: upcoming.yaml
memory/map/: central-bank-demand.md  dxy.md  equity-drawdown.md  exness-xauusd-packet-integrity.md  fed-leadership.md  (+8 more)
playbooks/: xauusd.md
prompts/: distiller.md  researcher.md  trader.md
studies/: risk_off_gold.py
tests/: conftest.py  test_agent.py  test_beliefs.py  test_beliefs_pg.py  test_calendar.py  test_charts.py  test_cycle.py  test_dashboard.py  test_deltalytix.py  test_distill.py  test_experiment.py  test_gates.py  test_graph.py  test_join.py  test_procedures.py  test_qkt.py  test_retrieve.py  test_sizing.py  test_store_pg.py
(+19 files in other folders)
