[project]
name = "qkt-lab"
version = "0.1.0"
description = "Autonomous commodities analyst: research, journal, learn, gated."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "mplfinance>=0.12",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[tool.setuptools.packages.find]
include = ["lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["live: needs a live MT5 gateway or network"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
